# doldetect

./: .gitignore  CMakeLists.txt  README.md  opencv_libs.txt
examples/: crop_samples.cpp  detect_dolphins.cpp  gen_samples.cpp  train_svm.cpp
include/: dbscan.h  doldetect.h  doldetect_dll.h
lib/: libdoldetect.so.1.0
multi_svm/: svm_1.xml  svm_2.xml  svm_3.xml
src/: CMakeLists.txt  dbscan.cpp  doldetect.cpp
windows/doldetect_dll/: doldetect_dll.sln
windows/doldetect_dll/Release/: doldetect_dll.exp  doldetect_dll.lib
windows/doldetect_dll/doldetect_dll/: doldetect_dll.vcxproj  doldetect_dll.vcxproj.filters
windows/doldetect_dll/doldetect_dll/Release/doldetect_dll.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  doldetect_dll.lastbuildstate  doldetect_dll.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
windows/examples/detect_dolphins/: detect_dolphins.sln
windows/examples/detect_dolphins/detect_dolphins/: detect_dolphins.vcxproj  detect_dolphins.vcxproj.filters
windows/examples/detect_dolphins/detect_dolphins/Release/detect_dolphins.tlog/: CL.read.1.tlog  (+6 more)
windows/examples/doldetect_dll/: doldetect_dll.sln
windows/examples/doldetect_dll/doldetect_dll/: doldetect_dll.vcxproj  doldetect_dll.vcxproj.filters
windows/examples/gen_samples/: gen_samples.sln
windows/examples/gen_samples/gen_samples/: gen_samples.vcxproj  gen_samples.vcxproj.filters
windows/examples/train_svm/: train_svm.sln
windows/examples/train_svm/train_svm/: train_svm.vcxproj  train_svm.vcxproj.filters
windows/lib/: doldetect_dll.lib
